# lalafell

./: .gitignore  Cargo.toml  README.md
examples/: bot.rs
src/: error.rs  lib.rs
src/bot/: mod.rs
src/commands/: mod.rs  prelude.rs
src/commands/params/: error.rs  mod.rs  test.rs
src/commands/params/helpers/: channel.rs  mention.rs  mod.rs  role.rs
src/listeners/: commands.rs  mod.rs
