[package]
name = "lalafell"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
log = "0.3"
fern = "0.4"
ansi_term = "0.9"
error-chain = "0.11"

[dependencies.serenity]
version = "0.5"
git = "https://github.com/zeyla/serenity"
branch = "v0.5.0"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils"]
