[package]
name = "lalafell"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
error-chain = "0.11"

[dependencies.serenity]
version = "0.5"
git = "https://github.com/jkcclemens/serenity"
branch = "self"
default-features = false
features = ["builder", "client", "gateway", "model", "utils"]
