[package]
name = "lalafell"
version = "0.1.0"
authors = ["Kyle Clemens <me@kyleclemens.com>"]

[dependencies]
error-chain = "0.12"
log = "0.4"
structopt = { version = "0.2", default-features = false }
quoted_strings = "0.1"

[dependencies.serenity]
version = "0.6.0-rc.1"
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "native_tls_backend"]
